add schedular in dev zone

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -44,4 +44,10 @@
   <ion-item>
     <button full large text-wrap ion-button (click)="updateAssociatedSMListToMongo()">Update Sales Tree</button>
   </ion-item>
+  <ion-item>
+      <button full large text-wrap ion-button (click)="storeInProgressOrderInErp()">Store In-Progress Order</button>
+    </ion-item>
+  <ion-item>
+    <button full large text-wrap ion-button (click)="updateOrderStatusToBilled()">Update Status To Billed</button>
+  </ion-item>
 </ion-content>
