correct variable names

--- a/src/pages/salesman-dashboard/salesman-dashboard.html
+++ b/src/pages/salesman-dashboard/salesman-dashboard.html
@@ -91,7 +91,7 @@
                     % Growth over LMTD
                   </p>
                   <p class="tab-label-lg">
-                    {{data.lmtdAchieve | number: '.2'}}%
+                    {{data.lmtdAchieve}}%
                 </p>
             </ion-col>
           </ion-row>
@@ -101,7 +101,7 @@
                   LYMTD Achieved
                 </p>
                 <p class="tab-label-lg">
-                  {{data.lymtdAchieve}}%
+                  {{data.lmtdGrowthPercentage}}%
                 </p>
             </ion-col>
             <ion-col class="tabs">
@@ -109,7 +109,7 @@
                     % Growth over LYMTD
                   </p>
                   <p class="tab-label-lg">
-                    {{data.lmtdAchieve | number: '.2'}}%
+                    {{data.lymtdGrowthPercentage}}%
                 </p>
             </ion-col>
           </ion-row>
