--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -64,7 +64,42 @@
                   </p>
               </ion-col>
             </ion-row>
-  
+            <ion-row>
+              <ion-col class="tabs">
+                  <p class="tab-label-sm">
+                    LMTD Achieved
+                  </p>
+                  <p class="tab-label-lg">
+                    {{data.lmtdAchieve}}
+                  </p>
+              </ion-col>
+              <ion-col class="tabs">
+                  <p class="tab-label-sm">
+                      % Growth over LMTD
+                    </p>
+                    <p class="tab-label-lg">
+                      {{data.lmtdAchieve}}%
+                  </p>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="tabs">
+                  <p class="tab-label-sm">
+                    LYMTD Achieved
+                  </p>
+                  <p class="tab-label-lg">
+                    {{data.lmtdGrowthPercentage}}%
+                  </p>
+              </ion-col>
+              <ion-col class="tabs">
+                  <p class="tab-label-sm">
+                      % Growth over LYMTD
+                    </p>
+                    <p class="tab-label-lg">
+                      {{data.lymtdGrowthPercentage}}%
+                  </p>
+              </ion-col>
+            </ion-row>
             <div>
                 <ion-row>
                   <div>
