--- a/src/pages/admin-dashboard/admin-dashboard.html
+++ b/src/pages/admin-dashboard/admin-dashboard.html
@@ -78,7 +78,7 @@
                       % Growth over LMTD
                     </p>
                     <p class="tab-label-lg">
-                      {{data.lmtdAchieve}}%
+                      {{data.lmtdGrowthPercentage}}%
                   </p>
               </ion-col>
             </ion-row>
@@ -88,7 +88,7 @@
                     LYMTD Achieved
                   </p>
                   <p class="tab-label-lg">
-                    {{data.lmtdGrowthPercentage}}%
+                    {{data.lymtdAchieve}}%
                   </p>
               </ion-col>
               <ion-col class="tabs">
