--- a/src/pages/view-customer-data/view-customer-data.html
+++ b/src/pages/view-customer-data/view-customer-data.html
@@ -58,6 +58,44 @@
                   </p>
               </ion-col>
             </ion-row>
+            <div *ngIf="customerDashboard==false">
+              <ion-row>
+                <ion-col class="tabs">
+                    <p class="tab-label-sm">
+                      LMTD Achieved
+                    </p>
+                    <p class="tab-label-lg">
+                      {{data.lmtdAchieve}}
+                    </p>
+                </ion-col>
+                <ion-col class="tabs">
+                    <p class="tab-label-sm">
+                        % Growth over LMTD
+                      </p>
+                      <p class="tab-label-lg">
+                        {{data.lmtdGrowthPercentage}}%
+                    </p>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col class="tabs">
+                    <p class="tab-label-sm">
+                      LYMTD Achieved
+                    </p>
+                    <p class="tab-label-lg">
+                      {{data.lymtdAchieve}}%
+                    </p>
+                </ion-col>
+                <ion-col class="tabs">
+                    <p class="tab-label-sm">
+                        % Growth over LYMTD
+                      </p>
+                      <p class="tab-label-lg">
+                        {{data.lymtdGrowthPercentage}}%
+                    </p>
+                </ion-col>
+              </ion-row>
+            </div>
 
             <div>
                 <ion-row>
