--- a/src/pages/salesman-dashboard/salesman-dashboard.html
+++ b/src/pages/salesman-dashboard/salesman-dashboard.html
@@ -51,10 +51,10 @@
           </ion-col>
           <ion-col class="tabs">
               <p class="tab-label-sm">
-                  MTD Achieved
+                  Balance To Do
                 </p>
                 <p class="tab-label-lg">
-                  {{data.achievement | number: '.2'}}
+                  {{data.balanceToDo | number: '.2'}}
               </p>
           </ion-col>
         </ion-row>
@@ -62,18 +62,18 @@
         <ion-row>
             <ion-col class="tabs">
                 <p class="tab-label-sm">
-                  % Achieved
-                </p>
-                <p class="tab-label-lg">
-                  {{data.achievedPercentage}}%
+                    MTD Achieved
+                  </p>
+                  <p class="tab-label-lg">
+                    {{data.achievement | number: '.2'}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
                 <p class="tab-label-sm">
-                    Balance To Do
-                  </p>
-                  <p class="tab-label-lg">
-                    {{data.balanceToDo | number: '.2'}}
+                  % Achieved
+                </p>
+                <p class="tab-label-lg">
+                  {{data.achievedPercentage}}%
                 </p>
             </ion-col>
           </ion-row>
@@ -91,7 +91,7 @@
                     % Growth over LMTD
                   </p>
                   <p class="tab-label-lg">
-                    {{data.lmtdAchieve}}%
+                    {{data.lmtdGrowthPercentage}}%
                 </p>
             </ion-col>
           </ion-row>
@@ -101,7 +101,7 @@
                   LYMTD Achieved
                 </p>
                 <p class="tab-label-lg">
-                  {{data.lmtdGrowthPercentage}}%
+                  {{data.lymtdAchieve}}
                 </p>
             </ion-col>
             <ion-col class="tabs">
