add user statement page

--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -29,6 +29,7 @@
       <ion-card-header class="card-title">
         <!-- TARGET vs ACHIEVEMENT -->
         <!-- <ion-icon></ion-icon> -->
+        <button ion-button (click)="moveToStatements()">View Statements</button>
         <ion-item class="switchCategory">
           <ion-label>TARGET vs ACHIEVEMENT</ion-label>
             <ion-select placeholder="Total"  interface="popover">
