--- a/src/pages/user-statements/user-statements.html
+++ b/src/pages/user-statements/user-statements.html
@@ -1,18 +1,36 @@
-<!--
-  Generated template for the UserStatementsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Statements</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content no-padding>
+  <ion-list>
+    <ion-item *ngFor="let item of statements">
+        <ion-grid>
+          <ion-row>
+            <!-- <ion-col col-1>
+              <ion-icon name="arrow-down" color="danger" *ngIf="item.debit !== ''"></ion-icon>
+                <ion-icon name="arrow-up" color="success" *ngIf="item.credit !== ''"></ion-icon>
+            </ion-col> -->
+            <ion-col col-8 text-wrap>
+              <p class="transDesc">{{item.desc}}</p>
+              <p class="transRef">#{{item.ref}}</p>
+              <p class="transDate">{{item.transDate}}</p>
+            </ion-col>
+            <ion-col col-4 class="transAmt">
+              <p color="success" class="credit" *ngIf="item.credit !== ''">+ {{item.credit}}</p>
+              <p color="danger" class="debit" *ngIf="item.debit !== ''">- {{item.debit}}</p>
+              <p class="balance">{{item.balance}}</p>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <button ion-button full padding class="downloadBtn"><ion-icon name="document"></ion-icon>
+      DOWNLOAD PDF
+  </button>
+</ion-footer>
