comment out TK part

--- a/src/pages/associated-customers-list-order/associated-customers-list-order.html
+++ b/src/pages/associated-customers-list-order/associated-customers-list-order.html
@@ -48,10 +48,10 @@
               <ion-col>
                   <ion-icon color="grey" name="cash"></ion-icon> <span class="order-list-label"></span> {{order.orderTotal}} ZMW
               </ion-col>
-              <ion-col text-right>
+              <!-- <ion-col text-right>
                 <ion-icon color="grey" name="trophy"></ion-icon>
                 <span class="order-list-label">Tk-Points:</span> <strong text-uppercase>{{order.totalTkPoints}}</strong>
-              </ion-col>
+              </ion-col> -->
           </ion-row>
           <ion-row>
             <ion-col>
