--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -54,12 +54,12 @@
                 <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
             </ion-col>
           </ion-row>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col col-12 text-center>
             <ion-icon color="grey" name="trophy"></ion-icon>
             Total Tk-Points: <strong text-uppercase>{{order.totalTkPoints}}</strong>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row>
           <ion-col col-12 text-center>
             <ion-icon color="grey" name="cog"></ion-icon>
