--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -39,9 +39,9 @@
             <ion-col col-12 text-center>
               <ion-icon name="cash" color="grey"></ion-icon> <span>Order Total: {{orderDetail.orderTotal}} ZMW</span>
             </ion-col>
-            <ion-col col-12 text-center>
+            <!-- <ion-col col-12 text-center>
               <ion-icon name="trophy" color="grey"></ion-icon> <span>Total Tk-Points: {{orderDetail.totalTkPoints}}</span>
-            </ion-col>
+            </ion-col> -->
             <ion-col col-12 text-center>
               <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight}} tonnage</span>
             </ion-col>
@@ -72,10 +72,10 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col col-12 text-center>
+            <!-- <ion-col col-12 text-center>
               <ion-icon name="trophy" color="grey"></ion-icon>
               <span>Tk-Point: {{item.tkPoint}}</span>
-            </ion-col>
+            </ion-col> -->
           </ion-row>
           <ion-row>
             <ion-col col-12 text-center>
