--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -77,11 +77,11 @@
               <ion-icon name="cog"></ion-icon> Weight Total: {{ totalNetWeight }} tonnage
             </strong>
           </ion-col>
-          <ion-col col-12>
+          <!-- <ion-col col-12>
             <strong>
               <ion-icon name="trophy"></ion-icon> Total TK Points: {{totalTK}}
             </strong>
-          </ion-col>
+          </ion-col> -->
           <ion-col col-12>
             <button ion-button outline color="secondary" (click)="openCategoryTotalModal()">View Category Wise Total</button>
           </ion-col>
@@ -166,12 +166,12 @@
             <span>Price: {{product.price}} ZMW</span>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col text-center *ngIf="product.tkPoint">
             <ion-icon name="trophy" color="grey"></ion-icon>
             TK-Point: <span>{{product.tkPoint}}</span>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row>
           <ion-col text-center *ngIf="product.netWeight">
             <ion-icon name="cog" color="grey"></ion-icon>
