--- a/src/pages/gift-checkout/gift-checkout.html
+++ b/src/pages/gift-checkout/gift-checkout.html
@@ -7,13 +7,13 @@
   <ion-list>
     <ion-card>
       <ion-card-header text-center>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col col-12>
             <strong>
               <ion-icon name="cash"></ion-icon> Total TK-Currency: {{totalTkCurrency}}
             </strong>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <span></span>
       </ion-card-header>
     </ion-card>
