--- a/src/pages/admin-edit-product/admin-edit-product.html
+++ b/src/pages/admin-edit-product/admin-edit-product.html
@@ -32,11 +32,11 @@
           </ion-item>
           <p class="error" *ngIf="price.hasError('required') && price.touched">*Price is required</p>
 
-          <ion-item>
+          <!-- <ion-item>
             <ion-label floating>TK-Point</ion-label>
             <ion-input type="text" formControlName="tkPoint"></ion-input>
-          </ion-item>
-          <p class="error" *ngIf="tkPoint.hasError('required') && tkPoint.touched">*TKPoint is required</p>
+          </ion-item> -->
+          <!-- <p class="error" *ngIf="tkPoint.hasError('required') && tkPoint.touched">*TKPoint is required</p> -->
 
           <!-- <ion-item>
                 <ion-label floating>Pack Type</ion-label>
