--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -81,10 +81,10 @@
           <ion-col>
               <ion-icon color="grey" name="cash"></ion-icon> <span class="order-list-label"></span> {{order.orderTotal}} ZMW
           </ion-col>
-          <ion-col>
+          <!-- <ion-col>
             <ion-icon color="grey" name="trophy"></ion-icon>
             <span class="order-list-label">Tk-Points:</span> <strong text-uppercase>{{order.totalTkPoints}}</strong>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
         <ion-row>
           <ion-col *ngIf="order.totalNetWeight">
