--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -40,12 +40,12 @@
             CaseSize: <span>{{product.currentCaseSize}}</span>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="product.tkPoint">
+        <!-- <ion-row *ngIf="product.tkPoint">
           <ion-col text-center>
             <ion-icon name="trophy" color="grey"></ion-icon>
             TK-Point: <span>{{product.tkPoint}}</span>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row *ngIf="product.tkPoint">
           <ion-col text-center>
             <ion-icon name="cog" color="grey"></ion-icon>
