--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -6,10 +6,10 @@
         <ion-icon name="cart"></ion-icon>
         <ion-badge class="cart-badge">{{cart.length}}</ion-badge>
       </button>
-      <button class="cart-btn" ion-button icon-only (click)="showTkToast()">
+      <!-- <button class="cart-btn" ion-button icon-only (click)="showTkToast()">
         <ion-icon name="trophy"></ion-icon>
         <ion-badge class="cart-badge">{{tkPoint}}</ion-badge>
-      </button>
+      </button> -->
       <button ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="more"></ion-icon>
       </button>
