--- a/src/pages/sm-edit-order/sm-edit-order.html
+++ b/src/pages/sm-edit-order/sm-edit-order.html
@@ -33,11 +33,11 @@
               <ion-icon name="cog"></ion-icon> Weight Total: {{ orderDetail.totalNetWeight}} tonnage
             </strong>
           </ion-col>
-          <ion-col col-12>
+          <!-- <ion-col col-12>
             <strong>
               <ion-icon name="trophy"></ion-icon> Total TK Points: {{orderDetail.totalTkPoints}}
             </strong>
-          </ion-col>
+          </ion-col> -->
           <ion-col col-12>
               <button ion-button outline color="secondary" (click)="openCategoryTotalModal()">View Category Wise Total</button>
             </ion-col>
@@ -69,12 +69,12 @@
             <span>Price: {{product.productDetail.price}} ZMW</span>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col text-center *ngIf="product.tkPoint">
             <ion-icon name="trophy" color="grey"></ion-icon>
             TK-Point: <span>{{product.tkPoint}}</span>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row>
           <ion-col text-center *ngIf="product.netWeight">
             <ion-icon name="cog" color="grey"></ion-icon>
