--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -138,7 +138,7 @@
             </ion-row>
   </ion-card>
 
-  <ion-card class="tabs-wrapper" *ngIf="data.tkPoints !== undefined">
+  <!-- <ion-card class="tabs-wrapper" *ngIf="data.tkPoints !== undefined">
       <ion-card-header class="card-title">
         TK CURRENCY
       </ion-card-header>
@@ -161,7 +161,7 @@
                 </p>
             </ion-col>
           </ion-row>
-  </ion-card>
+  </ion-card> -->
 
 <!-- <ion-card class="profile-card">
 
