--- a/src/pages/view-customer-data/view-customer-data.html
+++ b/src/pages/view-customer-data/view-customer-data.html
@@ -153,7 +153,7 @@
             </ion-row>
   </ion-card>
 
-  <ion-card class="tabs-wrapper" *ngIf="customerDashboard==true">
+  <!-- <ion-card class="tabs-wrapper" *ngIf="customerDashboard==true">
       <ion-card-header class="card-title">
         TK CURRENCY
       </ion-card-header>
@@ -176,5 +176,5 @@
                 </p>
             </ion-col>
           </ion-row>
-  </ion-card>
+  </ion-card> -->
 </ion-content>
