refactor table design

--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -89,7 +89,7 @@
         <ion-row>
           <ion-col *ngIf="order.totalNetWeight">
             <ion-icon color="grey" name="cog"></ion-icon>
-            <span class="order-list-label">Total Net Weight:</span> <strong text-uppercase>{{order.totalNetWeight}} tonnage</strong>
+            <span class="order-list-label">Total Net Weight:</span> <strong text-uppercase>{{order.totalNetWeight | number: '.2'}} tonnage</strong>
           </ion-col>
         </ion-row>
         
