--- a/src/pages/view-customer-data/view-customer-data.html
+++ b/src/pages/view-customer-data/view-customer-data.html
@@ -152,6 +152,8 @@
               </ion-col>
             </ion-row>
   </ion-card>
+  <button ion-button full (click)="moveToStatements()">View Statements</button>
+
 
   <!-- <ion-card class="tabs-wrapper" *ngIf="customerDashboard==true">
       <ion-card-header class="card-title">
