add schedular in devzone

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -50,4 +50,7 @@
   <ion-item>
     <button full large text-wrap ion-button (click)="updateOrderStatusToBilled()">Update Status To Billed</button>
   </ion-item>
+  <ion-item>
+    <button full large text-wrap ion-button (click)="createCustomerStatements()">Create Customer Statements</button>
+  </ion-item>
 </ion-content>
