Downloading PDF issues resolved

--- a/src/pages/user-statements/user-statements.html
+++ b/src/pages/user-statements/user-statements.html
@@ -34,7 +34,7 @@
 </ng-template>
 
 <ion-footer *ngIf="statements && statements.length">
-  <button ion-button full padding class="downloadBtn" (click)="downloadPdf()"><ion-icon name="document"></ion-icon>
+  <button ion-button full padding class="downloadBtn" (click)="createPdf()"><ion-icon name="document"></ion-icon>
       DOWNLOAD PDF
   </button>
 </ion-footer>
