--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -87,7 +87,7 @@
                   <button ion-button clear icon-only (click)="(product.quantity = incrementQty(product.quantity))"><ion-icon name="add-circle" ></ion-icon></button>
                 </ion-col>
                 <ion-col col-6 text-right>
-                  <button ion-button color="secondary" (click)="addToCart(product, product.quantity)" style="color: white!important;">
+                  <button [disabled]="!(product.price > 1)" ion-button color="secondary" (click)="addToCart(product, product.quantity)" style="color: white!important;">
                     <strong><ion-icon name="cart"></ion-icon>Add</strong>
                   </button>
                 </ion-col>
