--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -9,7 +9,7 @@
   <ion-navbar>
     <ion-title>TK Products</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only>
+      <button ion-button icon-only (click)="saveToServer()">
         <ion-icon name="cloud-upload"></ion-icon>
       </button>
       <button ion-button icon-only (click)="showRadioAlert()">
