--- a/src/pages/add-customer-info/add-customer-info.html
+++ b/src/pages/add-customer-info/add-customer-info.html
@@ -1,17 +1,8 @@
-<!--
-  Generated template for the PagesAddCustomerInfoPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Add Customer</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding>
 
@@ -33,11 +24,10 @@
         <ion-input formControlName="shopAddress" type="text"></ion-input>
       </ion-item>
 
-      <button ion-button color="secondary" round full [disabled]="customerForm.invalid" (click)="onAddCustomerInfo()">Add Customer</button>
+      <button ion-button color="secondary" full [disabled]="customerForm.invalid" (click)="onAddCustomerInfo()" class="add-cust-btn">Add Customer</button>
       <!-- <button ion-button color="secondary" round full (click)="onAddCustomerInfo()">Add Customer</button> -->
     </form>
 
   </ion-list>
-
 
 </ion-content>
