--- a/src/pages/competitive-products-list/competitive-products-list.html
+++ b/src/pages/competitive-products-list/competitive-products-list.html
@@ -16,30 +16,34 @@
   <ion-grid>
     <form [formGroup]="inputForm">
       <ion-row formGroupName="tkProduct">
-        <ion-col size="1">
-          {{ tkProduct['Product Name'] }}
+        <ion-col col-6>
+          <ion-label>
+            {{ tkProduct['Product Name'] }}
+          </ion-label>
         </ion-col>
-        <ion-col size="5">
+        <ion-col col-3>
           <ion-item>
             <ion-input type="text" placeholder="PRICE" formControlName="inputA"></ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="6">
+        <ion-col col-3>
           <ion-item>
             <ion-input type="number" placeholder="RRP" formControlName="inputB"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row *ngFor="let item of tkProduct['Competitive Product']; let i = index;" formGroupName="compProduct">
-        <ion-col size="1">
-          {{ item['Product Name'] }}
+        <ion-col col-6>
+          <ion-label>
+            {{ item['Product Name'] }}
+          </ion-label>
         </ion-col>
-        <ion-col size="5">
+        <ion-col col-3>
           <ion-item>
             <ion-input type="text" placeholder="PRICE" [formControlName]="i+'A'"></ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="6">
+        <ion-col col-3>
           <ion-item>
             <ion-input type="number" placeholder="RRP" [formControlName]="i+'B'"></ion-input>
           </ion-item>
@@ -49,8 +53,9 @@
   </ion-grid>
 
   <ion-fab right bottom>
-    <button ion-fab (click)="onOpenModal()">
-      <ion-icon name="add"></ion-icon>
+    <button ion-fab (click)="openAddTkProductModal()">
+    <!-- <button ion-fab (click)="onOpenModal()"> -->
+      <ion-icon name="add" class="custom-fab"></ion-icon>
     </button>
   </ion-fab>
 </ion-content>
