--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -5,7 +5,6 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>TK Products</ion-title>
     <ion-buttons end>
@@ -21,39 +20,83 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="tk-product-container">
   <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar>
   <ion-list [virtualScroll]="tkProductArray" [approxItemHeight]="'250px'">
-    <button ion-item (click)="onItemSelected(product)" *virtualItem="let product;">
-      <ion-grid>
-        <ion-row>
-          <ion-col col-12>Product Name: {{ product['Product Name'] }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-6>Product Code: {{ product['Product Code'] }}</ion-col>
-          <ion-col col-6>Brand: {{ product['BRAND'] }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-12>Master Name: {{ product['Master Name'] }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-12>Master Code: {{ product['Master Code'] }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-5>Category: {{ product['Product Catagory'] }}</ion-col>
-          <ion-col col-7>SubCategory: {{ product['Sub Catagory'] }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-6>Case Size: {{ product['Case Size'] }}</ion-col>
-          <ion-col col-6>Unit Size: {{ product['Unit Size'] }}</ion-col>
-        </ion-row>
-      </ion-grid>
-    </button>
+    <!-- <button ion-item (click)="onItemSelected(product)" *virtualItem="let product;"> -->
+      <ion-item (click)="onItemSelected(product)" *virtualItem="let product;" text-wrap>
+        <ion-grid>
+          <ion-row>
+            <ion-col col-12>
+              <ion-icon name="cube" color="grey"></ion-icon>
+              <span class="product-name">
+                {{ product['Product Name'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>Product Code: 
+              <span>
+                {{ product['Product Code'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>Brand: 
+              <span>
+                {{ product['BRAND'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>Master Name: 
+              <span>
+                {{ product['Master Name'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>Master Code: 
+              <span>
+                {{ product['Master Code'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>Category: 
+              <span>
+                {{ product['Product Catagory'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12>SubCategory: 
+              <span>
+                {{ product['Sub Catagory'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-6>Case Size: 
+              <span>
+                {{ product['Case Size'] }}
+              </span>
+            </ion-col>
+            <ion-col col-6>Unit Size: 
+              <span>
+                {{ product['Unit Size'] }}
+              </span>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    <!-- </button> -->
   </ion-list>
 
   <ion-fab right bottom>
-    <button ion-fab (click)="onOpenModal()">
-      <ion-icon name="add"></ion-icon>
+    <button ion-fab (click)="openAddTkProductModal()">
+    <!-- <button ion-fab (click)="onOpenModal()"> -->
+      <ion-icon name="add" class="custom-fab"></ion-icon>
     </button>
   </ion-fab>
 </ion-content>
