make functional impelmented modal

--- a/src/pages/add-customer-info/add-customer-info.html
+++ b/src/pages/add-customer-info/add-customer-info.html
@@ -10,18 +10,23 @@
 
     <form [formGroup]="customerForm">
       <ion-item>
+        <ion-label floating>Province</ion-label>
+        <ion-input formControlName="province" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Town/City</ion-label>
+        <ion-input formControlName="city" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Compound/Area</ion-label>
+        <ion-input formControlName="area" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
         <ion-label floating>Shop Name</ion-label>
         <ion-input formControlName="shopName" type="text"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label floating>Customer Name</ion-label>
-        <ion-input formControlName="customerName" type="text"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label floating>Address</ion-label>
-        <ion-input formControlName="shopAddress" type="text"></ion-input>
       </ion-item>
 
       <button ion-button color="secondary" full [disabled]="customerForm.invalid" (click)="onAddCustomerInfo()" class="add-cust-btn">Add Customer</button>
