Change TK Product List VIew and Flow

--- a/src/pages/add-customer-info/add-customer-info.html
+++ b/src/pages/add-customer-info/add-customer-info.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Add Customer</ion-title>
+    <ion-title>Capture price for this customer</ion-title>
   </ion-navbar>
 </ion-header>
 
