--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -8,9 +8,12 @@
   <ion-navbar>
     <ion-title>TK Products</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="saveToServer()">
-        <ion-icon name="cloud-upload"></ion-icon>
+      <button ion-button icon-only (click)="openAddTkProductModal()">
+        <ion-icon name="add"></ion-icon>
       </button>
+      <!-- <button ion-button icon-only (click)="saveToServer()">
+        <ion-icon name="cloud-upload"></ion-icon>
+      </button> -->
       <button ion-button icon-only (click)="showRadioAlert()">
         <ion-icon name="funnel"></ion-icon>
       </button>
@@ -22,81 +25,145 @@
 
 <ion-content class="tk-product-container">
   <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar>
-  <ion-list [virtualScroll]="tkProductArray" [approxItemHeight]="'250px'">
-    <!-- <button ion-item (click)="onItemSelected(product)" *virtualItem="let product;"> -->
-      <ion-item (click)="onItemSelected(product)" *virtualItem="let product;" text-wrap>
-        <ion-grid>
-          <ion-row>
-            <ion-col col-12>
-              <ion-icon name="cube" color="grey"></ion-icon>
-              <span class="product-name">
-                {{ product['Product Name'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>Product Code: 
-              <span>
-                {{ product['Product Code'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>Brand: 
-              <span>
-                {{ product['BRAND'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>Master Name: 
-              <span>
-                {{ product['Master Name'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>Master Code: 
-              <span>
-                {{ product['Master Code'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>Category: 
-              <span>
-                {{ product['Product Catagory'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-12>SubCategory: 
-              <span>
-                {{ product['Sub Catagory'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col col-6>Case Size: 
-              <span>
-                {{ product['Case Size'] }}
-              </span>
-            </ion-col>
-            <ion-col col-6>Unit Size: 
-              <span>
-                {{ product['Unit Size'] }}
-              </span>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
+  <ion-list [virtualScroll]="tkProductArray" [approxItemHeight]="'250px'" no-lines>
+    <!-- <button ion-item (click)="onItemSelected(product)" *virtualItem="let product;" text-wrap class="tk-item-main"> -->
+      <!-- <ion-item (click)="onItemSelected(product)" *virtualItem="let product;" text-wrap> -->
+
+        <div class="tk-item-wrapper" *virtualItem="let product;" text-wrap>
+        <!-- <div class="tk-item-wrapper" (click)="onItemToggle()" *virtualItem="let product;" text-wrap> -->
+        <!-- <div class="tk-item-wrapper" (click)="onItemSelected(product)" *virtualItem="let product;" text-wrap> -->
+
+          <ion-grid [ngClass]="[itemIsHighlighted ? 'main-grid highlight' : 'main-grid']">
+            <ion-row>
+              <ion-col col-12>
+                <ion-icon name="cube" color="grey"></ion-icon>
+                <span class="product-name">
+                  {{ product['Product Name'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <!-- <ion-row>
+              <ion-col col-12>Product Code: 
+                <span>
+                  {{ product['Product Code'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12>Brand: 
+                <span>
+                  {{ product['BRAND'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12>Master Name: 
+                <span>
+                  {{ product['Master Name'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12>Master Code: 
+                <span>
+                  {{ product['Master Code'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12>Category: 
+                <span>
+                  {{ product['Product Catagory'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-12>SubCategory: 
+                <span>
+                  {{ product['Sub Catagory'] }}
+                </span>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-6>Case Size: 
+                <span>
+                  {{ product['Case Size'] }}
+                </span>
+              </ion-col>
+              <ion-col col-6>Unit Size: 
+                <span>
+                  {{ product['Unit Size'] }}
+                </span>
+              </ion-col>
+            </ion-row> -->
+
+            <!-- Competitive Section Begins -->
+            <div class="competitive-section">
+              <p class="title">Competitive Products</p>
+              <!-- <form [formGroup]="inputForm"> -->
+                <!-- <ion-row formGroupName="tkProduct"> -->
+                <ion-row>
+                  <ion-col col-6>
+                    <ion-label>
+                      {{ product['Product Name'] }}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="text" placeholder="PRICE"></ion-input>
+                      <!-- <ion-input type="text" placeholder="PRICE" formControlName="inputA"></ion-input> -->
+                    </ion-item>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="number" placeholder="RRP"></ion-input>
+                      <!-- <ion-input type="number" placeholder="RRP" formControlName="inputB"></ion-input> -->
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+                <ion-row *ngFor="let item of product['Competitive Product']; let i = index;">
+                <!-- <ion-row *ngFor="let item of product['Competitive Product']; let i = index;" formGroupName="compProduct"> -->
+                  <ion-col col-6>
+                    <ion-label>
+                      {{ item['Product Name'] }}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="text" placeholder="PRICE"></ion-input>
+                      <!-- <ion-input type="text" placeholder="PRICE" [formControlName]="i+'A'"></ion-input> -->
+                    </ion-item>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="number" placeholder="RRP"></ion-input>
+                      <!-- <ion-input type="number" placeholder="RRP" [formControlName]="i+'B'"></ion-input> -->
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+              <!-- </form> -->
+            </div>
+            <!-- Competitive Section Ends -->
+
+            <div class="item-action-wrapper">
+              <button ion-button small color="secondary" class="cust-btn" (click)="saveToServer()">Upload</button>
+              <button ion-button small color="secondary" class="cust-btn" (click)="openAddCompetitiveProductModal(product['Master Code'])">Add New</button>
+            </div>
+
+            <!-- <div [ngClass]="[itemIsExpanded ? 'expandable-content expanded' : 'expandable-content collapsed']">
+              <p>Test Accordion Content</p>
+            </div> -->
+
+          </ion-grid>
+
+        </div>
+      <!-- </ion-item> -->
     <!-- </button> -->
   </ion-list>
 
-  <ion-fab right bottom>
+  <!-- <ion-fab right bottom>
     <button ion-fab (click)="openAddTkProductModal()">
-    <!-- <button ion-fab (click)="onOpenModal()"> -->
       <ion-icon name="add" class="custom-fab"></ion-icon>
     </button>
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
